Fixed Dark mode bugs

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -10,8 +10,8 @@
 }
 
 body {
-    background-color: var(--main-color5);
-    color: var(--main-color4);
+    background-color: var(--main-color4);
+    color: var(--main-color5);
     height: 100vh;
 }
 
